2010-09-28 Andreas Radke <andyrtr at archlinux.org>

	* new libreoffice based on go-openffice, see
	- http://www.freedesktop.org/wiki/Software/LibreOffice
	- add imagemagick for art tweaks

2010-09-16 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.98.1-1 :
	- prepare new 3.3 cycle in testing
	- alpha1 release
	- use old style provided splitted sources
	- remove git and rsync from makedeps

2010-09-15 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.1.4-2 :
	- disable-gio feature, see
	https://bugs.archlinux.org/task/18461 and
	https://bugzilla.novell.com/show_bug.cgi?id=567846
	http://bugs.gentoo.org/289665
	https://bugs.archlinux.org/task/18133 too?

2010-09-11 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.1.4-1 :
	- new upstream stable release
	- bring deps/makedeps/optdeps in sync with 
	  vanilla OOo
	- rework deps for clean builds
	- use system libwpg as optdep

2010-06-06 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.1.3-1 :
	- new upstream release = 3.2.1 RC2 = final
	- bring deps/makedeps/optdeps in sync with 
	  vanilla OOo

2010-05-15 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.1.1-1 :
	- new upstream release = 3.2.1 RC1
	- enable system-graphite
	- cleanup ArchLinux.patch

2010-04-04 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0.9-2 :
	- rebuild for icu 4.4
	- use internal redland. system one is still too broken

2010-03-26 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0.9-1 :
        new upstream release = post 3.2.0 bugfix release
	use lzma2/xz compression now for the source
	try to workaround bugs caused by use of new system redland
	use system lucene again that we downgraded to 2.9.2

2010-03-15 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0.7-1 :
        new upstream release = post 3.2.0 bugfix release

2010-02-07 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0.5-1 :
        new upstream release = 3.2.0rc5
	
2010-01-29 Andreas Radke <andyrtr at archlinux.org>
