@@ -2,7 +2,7 @@
 # Maintainer: AndyRTR <andyrtr@archlinux.org>
 
 pkgname=libreoffice
-_LOver=3.2.99.1 # = 3.3-alpha1
+_LOver=3.2.99.2 # = 3.3-alpha1
 pkgver=${_LOver}
 pkgrel=1
 pkgdesc="a productivity suite that is compatible with other major office suites"
@@ -142,27 +142,27 @@ source=(${_mirror}/${pkgname}-build-${_LOver}.tar.gz
 #options=('!makeflags')
 noextract=(libreoffice-\
 {artwork,base,bootstrap,calc,components,extensions,extras,filters,help,impress,l10n,libs-core,libs-extern,libs-extern-sys,libs-gui,postprocess,sdk,testing,ure,writer}-${_LOver}.tar.bz2)
-md5sums=('9f48404252c0440c9fb668e2634f56ec'
-         '5340511b6bc2043f642be4ee1e8bf3a7'
-         '6ef55d438e487e243f96e5c7ce3fe6ec'
-         '57b68ba83440a900533b40063191cfa5'
-         'daa04e0294bee6c285f004896aa609c8'
-         '8a9393624078d473ac4480cb6b549c20'
-         '271da86a068de92d57e4f9c65d512cc5'
-         '436f19879bd561eef407ce74a3e9f18e'
-         '42332f99506dff9780ebcd5d65b60034'
-         'fe17733e7afa553d25b57fb9c7dcfa2c'
-         'd6dc499bc930629304b1aa3abdfada76'
-         '921f6e161f33b66fbc7c550bfeb74e6f'
-         '9c5bdbb9aac46518aeb033e3a63184e2'
-         '5299b08196e521e1fcd4f7665ab0aea9'
-         'd9d45344146d591c51f944fcdc62ee6c'
-         'f8638cdfbd58b2a367cf3fe70b4b0c44'
-         '9df015c8299af8bf8b88d5b6288fd6fa'
-         'acbc48dba8bff10b1b5cf46f57597549'
-         '2cf115243dcfa686868e49927437d61f'
-         '310bf13fb37477cb0b533e92596c4c23'
-         '1fb344dd20334f42d7632e2f76ffb54c'
+md5sums=('592fdc3d8b6b70fee15a651649cd8e01'
+         '06023a85090474a186e6ce6473c40127'
+         'fd6ba9df4a24940acba3f860bf6a59fa'
+         'fd9c003b86eb42fca0856399dbb41e5e'
+         '09d69784cf1f2fa1dd579f1352255a39'
+         'f2bbc54234ef0e8cc2a9833d8a9794d2'
+         'dcfacc8ee8f9cf507fbe6584e120feb0'
+         '5a3f5a1fa57fc002886ab877145f5d83'
+         '88ce0e284e72a9e7f7c41aa464e26f1f'
+         '954247706070d40150c1f29d926d6bfa'
+         'b732c9854c7667cd17ab5c5217813157'
+         'a1ed0d867eda10b1f8721948d0a9982f'
+         'bd0ba58f97e26413ff33305ded0f68e9'
+         '82090695974145d43f217c1469336583'
+         '36f3d9e5b266ac4c487608110f45dda6'
+         '04275c10b9b2fe64cf92aeb8da74221e'
+         'c6dc3c8beebd362b655e1bfd8118fa3c'
+         '5273c85300724600e557147d4cbf9fae'
+         'f658ee713f18e3c00125d363fc862c85'
+         '15b0c3b5d99335f2a6e034841918e8fe'
+         '31909d2508ae56ff971a871fc7404c87'
          'a77cc2fdff90146485e0b1f1398bb0d4'
          '63ddc5116488985e820075e65fbe6aa4'
          '09357cc74975b01714e00c5899ea1881'
@@ -272,19 +272,16 @@ build() {
 	unset CFLAGS
 	unset CXXFLAGS
 
-	unset LDFLAGS
-#	export LDFLAGS="-Wl,--hash-style=gnu -Wl,--as-needed"
-
 	# python2 fix
 	export PYTHON=python2
-	sed -i -e "s|^#!/usr/bin/python|#!/usr/bin/python2|" ${srcdir}/${pkgname}-build-${_LOver}/bin/add_acor.py
 	
 	if [ "$CARCH" = "x86_64" ]; then
 	      EXTRAOPTS="--without-stlport"
-	 else EXTRAOPTS="--with-stlport --with-additional-sections=SystemGraphiteWithSTLport"
+	# else EXTRAOPTS="--with-stlport --with-additional-sections=SystemGraphiteWithSTLport"
+	 # fix i686 system cppunit with-stlport
+	 else EXTRAOPTS="--without-stlport"
 	fi
 
-#	autoreconf
 	./configure --with-distro=ArchLinux \
 		--with-build-version="${_LOver} ArchLinux build-${pkgrel} (${_ootag})"\
 		--without-git \
