@@ -1,3 +1,11 @@
+2010-10-09 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.2.99.2-1 :
+	- new upstream beta release
+	- reenable LDFLAGS
+	- termporarely build without stlport also for i686 to workaround 
+	  build issues with cppunit
+	
 2010-09-28 Andreas Radke <andyrtr at archlinux.org>
 
 	* new libreoffice based on go-openffice, see
@@ -6,7 +14,7 @@
 
 2010-09-16 Andreas Radke <andyrtr at archlinux.org>
 
-        * 3.2.98.1-1 :
+        * 3.2.99.1-1 :
 	- prepare new 3.3 cycle in testing
 	- alpha1 release
 	- use old style provided splitted sources
